--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,5 +1,6 @@
 :root {
     --height-slider: 400px;
+    --width-slider: 370px;
 
 }
 
@@ -9,13 +10,19 @@
     justify-content: space-between;
     align-items: center;
     max-width: 2000px;
-
+    width: 100%;
 
 }
-
-.image {
+.home-slider-product-img-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
+}
+.home-slider-product-img {
+    max-width: 70%;
+    max-height: 70%;
 }
 
 .home-slider-product {
@@ -24,9 +31,10 @@
     flex-direction: column;
     justify-content: flex-start;
     text-align: center;
-    max-width: 300px;
+    width: var(--width-slider);
     margin: 5px;
-    background-color: lightgrey;
+    padding: 10px;
+    border: 2px solid lightgray;
 
 
 }
@@ -44,24 +52,41 @@
     margin-left: 40px;
 }
 
-.slider-next-button {
-    border-radius: 7px;
+.home-slider-buttons {
+    max-width: 30px;
+    max-height: 30px;
+    /* border-radius: 7px;
     border: none;
     min-width: 40px;
     z-index: 99;
     margin-left: 0px;
+    padding: 2px; */
 }
 
-
-
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1750px) {
     :root {
-        --height-slider: 300px;
+        --width-slider: 300px;
+    }
+}
+@media only screen and (max-width: 1500px) {
+    :root {
+        --width-slider: 250px;
+    }
+}
+@media only screen and (max-width: 1250px) {
+    :root {
+        --width-slider: 200px;
+    }
+}
+@media only screen and (max-width: 1050px) {
+    :root {
+        --width-slider: 350px;
+    }
+}
+@media only screen and (max-width: 900px) {
+    :root {
+        --width-slider: 250px;
     }
 }
 
-@media only screen and (max-width: 850px) {
-    :root {
-        --height-slider: 250px;
-    }
-}
+
