--- a/frontend/src/components/MyCart.css
+++ b/frontend/src/components/MyCart.css
@@ -2,8 +2,35 @@
     max-width: 1500px;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    min-height: 400px;
+}
+.mycart-cart{
+    width: 60%;
+}
+
+.mycart-cart-title{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.mycart-cart-deleteAll{
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items:  center;
+    margin-bottom: 10px;
+    width: 200px;
+    height: 40px;
+}
+.mycart-cart-deleteAll:hover{
+    border: 2px solid #e8e8e8;
+    border-radius: 10px;
+    background-color: #f5f5f5;
 }
 .mycart-product{
     max-width: 1500px;
@@ -11,12 +38,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-style: solid;
-    border-radius: 15px;
-    border-color: #E8E8E8;
-    background-color: #E8E8E8;
+    border: 2px solid #e8e8e8;
+    border-radius: 10px;
     height: 100px;
-    
+    margin-bottom: 30px;
 }
 .mycart-product-link{
     max-width: 1500px;
@@ -24,9 +49,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 50%;
     text-decoration: none;
 }
+
 .cart-img-container{
     height: 100px;
     width: 100px;
@@ -40,5 +65,90 @@
     max-width: 100px;
 }
 .mycart-price-label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
     margin-right: 50px;
+}
+
+.mycart-price-changeAmount{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-left: 20px;
+    width: 150px;
+}
+.mycart-price-changeAmount label{
+    display: flex;
+    justify-content: center;
+    width: 60px;
+}
+
+.mycart-cart-icon{
+    width: 20px;
+    height: 20px;
+}
+.mycart-summary{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    min-height: 200px;
+    border: 2px solid #e8e8e8;
+    border-radius: 10px;
+}
+
+.mycart-summary span{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.mycart-summary label{
+    background-color: darkgrey;
+    display: flex;
+    flex-direction: row;
+    justify-content: center
+}
+
+.mycart-summary-button{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(55, 179, 6);
+    color: white;
+    width: 80%;
+    height: 40px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+}
+
+@media only screen and (max-width: 1000px) {
+
+    .mycart-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .mycart-cart{
+        width: 100%;
+    }
+    .mycart-product{
+        justify-content: space-between;
+    }
+    .mycart-summary{
+        width: 100%;
+    }
+    .mycart-price-label{
+        margin-right: 5px;
+    }
+    .mycart-price-changeAmount{
+        margin-left: 0px;
+        width:100px;
+    }
 }
