add products parameters table, add footer and other fixes

--- a/frontend/src/components/MyOrders.css
+++ b/frontend/src/components/MyOrders.css
@@ -16,7 +16,7 @@ a{
     margin-bottom: 30px;
     border-style: solid;
     border-radius: 15px;
-    border-color: rgb(245, 245, 245);
+    border-color: #e8e8e8;
 }
 
 .userOrders-order-details {
