--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -4,7 +4,6 @@
 
 }
 
-
 .home-slider {
     display: flex;
     justify-content: space-between;
@@ -49,6 +48,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: -20px;
+    min-height: 600px;
 }
 
 .home-container h1 {
