--- a/frontend/src/components/LogIn.css
+++ b/frontend/src/components/LogIn.css
@@ -5,6 +5,7 @@
     width: 80%;
     justify-content: space-around;
     align-items: flex-start;
+    min-height: 600px;
 }
 .login-container h3{
     font-size: 35px;
