--- a/frontend/src/components/OrderForm.css
+++ b/frontend/src/components/OrderForm.css
@@ -5,6 +5,7 @@
     align-items: space-between;
     max-width: 2000px;
     width: 100%;
+    min-height: 600px;
 }
 
 
@@ -109,12 +110,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    height: 200px;
+    justify-content: flex-start;
+    min-height: 600px;
     max-width: 2000px;
     width: 100%;
 }
-
+.orderform-placed-order span{
+    margin-bottom: 40px;
+}
 @media only screen and (max-width: 750px) {
     .orderform-container {
         flex-direction: column;
