--- a/frontend/src/components/searchProducts.css
+++ b/frontend/src/components/searchProducts.css
@@ -3,12 +3,12 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    min-height: 600px;
 }
 
 .searchProducts-product-container {
-    background-color: #ffff;
     border-radius: 15px;
     border: 3px solid #E8E8E8;
     display: flex;
@@ -59,12 +59,13 @@
     border-radius: 10px;
     font-size: 18px;
     cursor: pointer;
-    background-color:rgb(69, 224, 7);
+    background-color:rgb(55, 179, 7);
+    color: #E8E8E8;
     border: 0px solid #fff;
 }
 
 .searchProducts-button:hover {
-    background-color: rgb(55, 179, 7);
+    background-color: rgb(42, 128, 9);
 }
 
 @media only screen and (max-width: 800px) {
