--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(245,245,245);
 }
 
 code {
@@ -12,6 +13,8 @@ code {
 }
 
 #root {
+  height: 100%;
+  margin-top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
