--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,10 +1,12 @@
 .footer-container {
     width: 100%;
+    max-width: 2000px;
     border-top: 2px solid #e8e8e8;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 .footer {
@@ -12,7 +14,6 @@
     flex-direction: row;
     justify-content: space-around;
     width: 80%;
-
 }
 
 .footer-socials{
@@ -64,7 +65,7 @@
     border-top: 2px solid #e8e8e8;
 }
 
-@media only screen and (max-width: 700px) {
+@media(max-width: 700px) {
     .footer {
         flex-direction: column;
     }
