--- a/frontend/src/components/MyCart.css
+++ b/frontend/src/components/MyCart.css
@@ -128,7 +128,7 @@
     border: none;
 }
 
-@media only screen and (max-width: 1000px) {
+@media (max-width: 1000px) {
 
     .mycart-container{
         flex-direction: column;
