--- a/frontend/src/components/OrderForm.css
+++ b/frontend/src/components/OrderForm.css
@@ -118,7 +118,7 @@
 .orderform-placed-order span{
     margin-bottom: 40px;
 }
-@media only screen and (max-width: 750px) {
+@media (max-width: 750px) {
     .orderform-container {
         flex-direction: column;
     }
