--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -119,7 +119,7 @@
     width: 50%;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
     :root {
         --button-width: 150px;
         --button-font: 15px;
