--- a/frontend/src/components/admin/AdminPanel.css
+++ b/frontend/src/components/admin/AdminPanel.css
@@ -19,7 +19,7 @@
     font-size: 25px;
 }
 
-@media only screen and (max-width: 800px) {
+@media (max-width: 800px) {
     .adminpanel-link{
     width: 100%;
     }
