--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,46 +1,68 @@
+@import url("./variable.css");
 :root {
     --title-font-size: 40px;
 }
 
 
-.nav-container {
+.nav-container, .nav-container1, .nav-main,.nav-up, .nav-down, .nav-main-fixed,
+.nav-left, .nav-logo, .nav-search-section, .nav-search-button,
+.nav-right, .nav-cart,.nav-dropdownMenu-container1 , .nav-button,
+.nav-dropdownMenu-link, .nav-categories-container, .nav-categoryButton-container,
+.nav-categoryButton, .nav-categoryButton span {
     display: flex;
-    flex-direction: flex-start;
     justify-content: center;
     align-items: center;
+}
+
+.nav-container {
+    user-select: none; 
     width: 100%;
     margin-bottom: 30px;
+    border-bottom: 2px solid var(--border-color);
+    z-index: 99;
 }
 
 .nav-container1 {
+    flex-direction: column;
     width: 100%;
-    max-width: 2000px;
+    max-width: var(--max-width);
 }
+
+.nav-container-fixed {
+    background-color: var(--background-color);
+    position: fixed;
+    right: 0px;
+    left: 30px;
+    top:0px;
+}
+
 
 
 .nav-main {
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.nav-up{
+    width: 100%;
+}
+.nav-down{
+    width: 100%;
+    justify-content: space-between;
 }
 .nav-main-fixed {
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    background-color: var(--background-color);
+    justify-content: space-between;
     position: fixed;
     right: 0px;
-    left: 0px;
+    left: 30px;
     top:0px;
 }
 
 
 .nav-left {
     width: 60%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start
 }
 
 .nav-logo {
@@ -49,34 +71,27 @@
 }
 
 .nav-login {
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
-.nav-search-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
+.nav-search-section{
+    width: 100%;
+    max-width: 600px;
 }
-
 .nav-search {
-    width: 300px;
+    margin-left: 50px;
+    width: 60%;
     height: 30px;
 }
 
 .nav-search-select {
-    width: 100px;
+    width: 30%;
     height: 35px;
 }
 
 .nav-search-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border: 1px solid black;
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
     height: 33px;
     padding-right: 5px;
     padding-left: 5px;
@@ -85,27 +100,11 @@
 
 .nav-right {
     width: 40%;
-    display: flex;
-    align-items: center;
     justify-content: space-around;
-
 }
-
-.nav-cart {
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: flex-end;
-
-}
-
 
 .nav-dropdownMenu-container1 {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .nav-dropdownMenu-container {
@@ -114,53 +113,67 @@
 }
 
 .nav-button {
-    background-color: white;
-    display: flex;
+    background-color: var(--background-color);
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 120px;
     height: 80px;
     font-size: 16px;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    transition-duration: var(--transition-duration);
+    transition-property: transform;
+}
+.nav-button:hover {
+    transform: scale(103%);
+    border: 2px solid var(--border-color);
+}
+#your-account:hover{
+    border: none;
 }
 
-.nav-button:hover {
-    font-size: 105%;
-    border: 3px solid #E8E8E8;
+
+.nav-dropdownMenu-container1:hover {
+    border-radius: 10px;
+    transform: scale(105%);
+    border: 3px solid var(--border-color);
+}
+
+@keyframes dropdownmenuappear {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 
 .nav-dropdownMenu-show {
     border-radius: 10px;
-    border: 3px solid #E8E8E8;
-    display: flex;
+    border: 3px solid var(--border-color);
     flex-direction: column;
     position: absolute;
     z-index: 1000;
     width: 250px;
     min-width: 150px;
-    background-color: white;
     margin-bottom: 60px;
+    animation-name: dropdownmenuappear;
+    animation-duration: var(--transition-duration);
 }
 
 .nav-dropdownMenu-link {
     width: 100%;
-    display: flex;
-    flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
     height: 40px;
     border: none;
-    font-size: 15px;
     margin-right: 25px;
-    background-color: white;
+    background-color: var(--background-color);
+    font-size: 0.6rem;
 }
 
 .nav-dropdownMenu-link:hover {
-    font-size: 110%;
-    background-color: #F5F5F5;
+    transform: scale(102%);
+    background-color: var(--border-color);
 }
 
 
@@ -183,39 +196,30 @@
 }
 
 .nav-categories-container {
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 50px;
     justify-content: flex-start;
     align-items: flex-start;
-    border-bottom: 2px solid #E8E8E8;
 }
 
 .nav-categoryButton-container {
-    display: flex;
     width: 100%;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
 }
 
 .nav-categoryButton {
     height: 60px;
     font-size: 15px;
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     border: none;
     margin-left: 0px;
+    background-color: var(--background-color);
 }
 
 .nav-categoryButton span {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     height: 100%;
 }
 
@@ -224,6 +228,7 @@
 }
 
 .nav-category {
+    background-color: var(--background-color);
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -231,6 +236,8 @@
     font-size: 15px;
     justify-content: center;
     align-items: center;
+    transition-duration: var(--transition-duration);
+    
 }
 
 .nav-category label {
@@ -245,10 +252,12 @@
 }
 
 .nav-category:hover {
-    background-color: rgb(245, 245, 245);
+    transform: scale(102%);
+    background-color: rgb(245,245,245);
 }
 
-@media all and (max-width: 1250px) {
+
+@media all and (max-width: 1350px) {
     .nav-logo {
         width: 250px;
     }
@@ -260,7 +269,7 @@
 }
 
 
-@media all and (max-width: 1000px) {
+@media all and (max-width: 1100px) {
     :root {
         --title-font-size: 15px;
     }
@@ -294,8 +303,8 @@
         justify-content: flex-start;
     }
 
-    .nav-main {
-        flex-direction: column;
+    .nav-down{
+        justify-content: space-around;
     }
     .nav-main-fixed{
         flex-direction: column;
@@ -307,7 +316,7 @@
     }
 
     .nav-categories-container {
-        width: 100%;
+        width: 100px;
         height: 100%;
         flex-direction: column;
         justify-content: flex-start;
@@ -315,7 +324,7 @@
     }
 
     .nav-categoryButton {
-        width: 200px;
+        width: 100px;
         justify-content: flex-start;
     }
 
@@ -330,23 +339,44 @@
 }
 
 @media (max-width: 650px) {
-
-
-
     .nav-search {
-        width: 100px;
+        width: 150px;
         height: 30px;
     }
 
     .nav-search-select {
-        width: 50px;
+        width: 70px;
         height: 35px;
     }
+    .nav-up{
 
+    }
     .nav-logo {
-        width: 200px;
-        height: 75px;
+        width: 150px;
+        height: 50px;
+    }
+    .nav-button {
+        width: 60px;
+        height: 50px;
+        font-size: 0.4rem;
+        border-radius: 0px;
+        transition: none;
+    }
+    .nav-button:hover {
+        transform:none;
+        border: none;
+
     }
 
+    .nav-dropdownMenu-container1:hover {
+        transform: none;
+        border: none;
+    }
+    
+    
+    .nav-dropdownMenu-show {
+        width: 100px; 
+        font-size: 0.4rem;
+    }
 
 }
