--- a/frontend/src/components/OrderForm.css
+++ b/frontend/src/components/OrderForm.css
@@ -61,8 +61,8 @@
 }
 
 .orderform-form-details-button:hover {
-    font-size: 110%;
-    background-color: rgb(7, 160, 109);
+    transform: scale(102%);
+    background-color: rgb(7, 153, 104);
 }
 
 
