--- a/frontend/src/components/searchProducts.css
+++ b/frontend/src/components/searchProducts.css
@@ -69,6 +69,9 @@
 }
 
 @media (max-width: 800px) {
+    .searchProducts-container{
+        width: 100%;
+    }
     .searchProducts-product-container {
         font-size: 13px;
     }
