--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,14 @@
+@import url("./components/variable.css"); 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white;
-  color: rgb(24, 24, 24);
+  background-color: var(--background-color);
+  color: var(--font-color);
   scroll-behavior: smooth;
   margin:0;
+  min-width: var(--min-width);
 }
 
 code {
@@ -16,12 +17,21 @@ code {
 }
 
 #root {
-  margin:0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 100%;
-  min-width: 400px;
+  margin-left:80px;
+  margin-right: 80px;
+}
+html{
+  font-size: 22px;
+}
+
+@media (max-width: 650px) {
+  #root{
+    margin-left:10px;
+    margin-right: 10px;
+  }
 }
