--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     margin-top: auto;
+    font-size: 0.9rem;
 }
 
 .footer {
@@ -65,9 +66,15 @@
     border-top: 2px solid #e8e8e8;
 }
 
-@media(max-width: 700px) {
+@media(max-width: 900px) {
+    .footer-container{
+        font-size: 0.7rem;
+    }
+}
+@media(max-width: 700px) {    
     .footer {
         flex-direction: column;
+        align-items: center;
     }
 
 }
