--- a/frontend/src/components/LogIn.css
+++ b/frontend/src/components/LogIn.css
@@ -1,3 +1,5 @@
+@import url("./variable.css");
+
 .login-container{
     max-width: 2000px;
     display: flex;
@@ -6,6 +8,7 @@
     justify-content: space-around;
     align-items: flex-start;
     min-height: 600px;
+    font-size: 1rem;
 }
 .login-container h3{
     font-size: 35px;
@@ -78,7 +81,12 @@ input.login-login-form-control{
 .login-button:hover{
     background-color: #136eaa;
 }
-
+.login-errorMsg{
+    color: red;
+    font-size: 0.7rem;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
 @media (max-width: 1150px) {
     .login-container{
