--- a/frontend/src/components/MyCart.css
+++ b/frontend/src/components/MyCart.css
@@ -6,6 +6,7 @@
     justify-content: space-around;
     align-items: flex-start;
     min-height: 400px;
+    font-size: 0.8rem;
 }
 
 .mycart-cart{
@@ -135,6 +136,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        font-size: 0.7rem;
     }
     .mycart-cart{
         width: 100%;
@@ -151,5 +153,19 @@
     .mycart-price-changeAmount{
         margin-left: 0px;
         width:100px;
+    }
+}
+@media (max-width: 500px) {
+
+    .mycart-container{
+        font-size: 0.6rem;
+    }
+    .cart-img-container{
+        height: 60px;
+        width: 60px;
+    }
+    .cart-img{
+        max-height: 60px;
+        max-width: 60px;
     }
 }
