--- a/frontend/src/components/MyOrders.css
+++ b/frontend/src/components/MyOrders.css
@@ -7,6 +7,7 @@ a{
     max-width: 2000px;
     display: flex;
     flex-direction: column;
+    font-size: 1rem;
 }
 
 .userOrders-order {
@@ -34,7 +35,6 @@ a{
     flex-wrap: wrap;
 }
 .userOrders-order-details span{
-    font-size: 20px;
     margin-bottom: 15px;
 }
 .userOrders-order-products {
@@ -66,3 +66,27 @@ a{
     max-height: 100px;
 }
 
+@media (max-width: 750px) {
+    .userOrders-container {
+        font-size: 0.7rem;
+    }
+    .userOrders-order-products-img{
+        max-width: 80px;
+        max-height: 80px;
+    }
+}
+
+
+@media (max-width: 500px) {
+    .userOrders-container {
+        font-size: 0.5rem;
+    }
+    .userOrders-order-products-img{
+        max-width: 60px;
+        max-height: 60px;
+    }
+    .userOrders-order-products-img-container{
+        height: 60px;
+        width: 60px;
+    }
+}
