--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,12 +1,9 @@
 @import url("./variable.css");
-:root {
-    --title-font-size: 40px;
-}
 
 
-.nav-container, .nav-container1, .nav-main,.nav-up, .nav-down, .nav-main-fixed,
+.nav-container, .nav-container1, .nav-main, .nav-up, .nav-down, .nav-main-fixed,
 .nav-left, .nav-logo, .nav-search-section, .nav-search-button,
-.nav-right, .nav-cart,.nav-dropdownMenu-container1 , .nav-button,
+.nav-right, .nav-cart, .nav-button,
 .nav-dropdownMenu-link, .nav-categories-container, .nav-categoryButton-container,
 .nav-categoryButton, .nav-categoryButton span {
     display: flex;
@@ -15,73 +12,87 @@
 }
 
 .nav-container {
-    user-select: none; 
     width: 100%;
+    user-select: none;
     margin-bottom: 30px;
     border-bottom: 2px solid var(--border-color);
     z-index: 99;
+    font-size: 0.8rem;
+    right: none;
+    left: none;
 }
 
-.nav-container1 {
-    flex-direction: column;
+
+.nav {
     width: 100%;
+    height: 100%;
     max-width: var(--max-width);
 }
 
-.nav-container-fixed {
+
+
+.nav-fixed {
     background-color: var(--background-color);
     position: fixed;
-    right: 0px;
-    left: 30px;
-    top:0px;
+    right: 80px;
+    left: 80px;
+    top: 0px;
 }
-
 
 
 .nav-main {
     width: 100%;
     flex-direction: column;
     justify-content: space-between;
-}
-.nav-up{
-    width: 100%;
-}
-.nav-down{
-    width: 100%;
-    justify-content: space-between;
-}
-.nav-main-fixed {
-    background-color: var(--background-color);
-    justify-content: space-between;
-    position: fixed;
-    right: 0px;
-    left: 30px;
-    top:0px;
+    height: 160px;
 }
 
+.nav-up {
+    width: 100%;
+    height: 65%;
+}
+
+.nav-down {
+    width: 100%;
+    height: 35%;
+    justify-content: space-between;
+}
 
 .nav-left {
-    width: 60%;
-    justify-content: flex-start
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
 }
 
 .nav-logo {
-    width: 300px;
-    height: 100px;
+    max-width: 400px;
+    height: 100%;
 }
 
-.nav-login {
-    justify-content: space-between;
-}
-
-.nav-search-section{
+.nav-logo img {
     width: 100%;
-    max-width: 600px;
+    height: 100%;
 }
+
+
+.nav-search-section {
+    margin-left: 15px;
+    width: 100%;
+    border: 2px solid var(--border-color);
+    border-radius: 10px;
+}
+
+.nav-search, .nav-search-select, .nav-search-section button {
+    border: none;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    outline: 0;
+}
+
 .nav-search {
-    margin-left: 50px;
-    width: 60%;
+    width: 100%;
     height: 30px;
+    /* border-right: 2px solid #cacaca; */
 }
 
 .nav-search-select {
@@ -89,61 +100,63 @@
     height: 35px;
 }
 
-.nav-search-button {
-    background-color: var(--background-color);
-    border: 1px solid var(--border-color);
-    height: 33px;
-    padding-right: 5px;
-    padding-left: 5px;
+.nav-search-section button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.nav-search-section img {
+    margin-top: 5px;
+    width: 15px;
+    height: 15px;
+}
+
 
 
 .nav-right {
     width: 40%;
+    height: 100%;
     justify-content: space-around;
 }
 
-.nav-dropdownMenu-container1 {
-    flex-direction: column;
-}
 
 .nav-dropdownMenu-container {
     position: relative;
     display: inline-block;
+    height: 80%;
 }
 
 .nav-button {
     background-color: var(--background-color);
     flex-direction: column;
     width: 120px;
-    height: 80px;
-    font-size: 16px;
+    height: 80%;
     border: none;
     cursor: pointer;
     border-radius: 10px;
     transition-duration: var(--transition-duration);
     transition-property: transform;
 }
+
 .nav-button:hover {
-    transform: scale(103%);
+    transform: scale(101%);
     border: 2px solid var(--border-color);
 }
-#your-account:hover{
-    border: none;
+
+#your-account {
+    height: 100%;
 }
 
 
-.nav-dropdownMenu-container1:hover {
-    border-radius: 10px;
-    transform: scale(105%);
-    border: 3px solid var(--border-color);
-}
 
 @keyframes dropdownmenuappear {
-    from{
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
@@ -167,8 +180,8 @@
     height: 40px;
     border: none;
     margin-right: 25px;
+    font-size: 0.8rem;
     background-color: var(--background-color);
-    font-size: 0.6rem;
 }
 
 .nav-dropdownMenu-link:hover {
@@ -197,7 +210,7 @@
 
 .nav-categories-container {
     width: 100%;
-    height: 50px;
+    height: 100%;
     justify-content: flex-start;
     align-items: flex-start;
 }
@@ -210,7 +223,6 @@
 
 .nav-categoryButton {
     height: 60px;
-    font-size: 15px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -233,11 +245,10 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    font-size: 15px;
     justify-content: center;
     align-items: center;
     transition-duration: var(--transition-duration);
-    
+
 }
 
 .nav-category label {
@@ -253,79 +264,37 @@
 
 .nav-category:hover {
     transform: scale(102%);
-    background-color: rgb(245,245,245);
+    background-color: rgb(245, 245, 245);
 }
 
 
 @media all and (max-width: 1350px) {
     .nav-logo {
-        width: 250px;
-    }
-
-    .nav-search {
-        width: 200px;
-    }
-
-}
-
-
-@media all and (max-width: 1100px) {
-    :root {
-        --title-font-size: 15px;
-    }
-
-    .nav-container {
-        flex-direction: column;
-    }
-
-    .nav-left {
-        justify-content: space-around;
-        align-items: center;
-        width: 100%;
+        max-width: 300px;
     }
 
     .nav-right {
-        justify-content: space-around;
-        align-items: center;
-        width: 100%;
-
+        justify-content: space-between;
     }
 
     .nav-dropdownMenu-show {
         left: 0;
     }
-
-    .nav-logo {
-        width: 250px;
+    .nav-dropdownMenu-link{
+        font-size: inherit;
     }
 
-    .nav-container {
-        justify-content: flex-start;
-    }
-
-    .nav-down{
-        justify-content: space-around;
-    }
-    .nav-main-fixed{
+    .nav-main-fixed {
         flex-direction: column;
-    }
-
-
-    .nav-container {
-        margin-top: 15px;
     }
 
     .nav-categories-container {
         width: 100px;
         height: 100%;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
     }
 
     .nav-categoryButton {
         width: 100px;
-        justify-content: flex-start;
     }
 
     .nav-category {
@@ -339,31 +308,82 @@
 }
 
 @media (max-width: 650px) {
+    .nav-container {
+        border: none;
+        font-size: 0.6rem;
+    }
+
+    .nav-down {
+        justify-content: flex-start;
+        height: 30%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .nav-categories-container {
+        align-items: center;
+    }
+
+
+
+    .nav-search-section {
+        width: 100%;
+        height: 100%;
+        justify-content: flex-start;
+    }
+
     .nav-search {
-        width: 150px;
-        height: 30px;
+        width: 100%;
+        height: 90%;
+        margin: 0px;
     }
 
     .nav-search-select {
-        width: 70px;
-        height: 35px;
+        width: 30%;
+        height: 100%;
     }
-    .nav-up{
 
+    .nav-search-section button {
+        width: 20%;
+        height: 100%;
     }
+
+
+    .nav-main {
+        height: 120px;
+    }
+
+    .nav-up {
+        justify-content: space-between;
+        height: 70%;
+    }
+
+    .nav-left {
+        width: auto;
+        height: 100%;
+        justify-content: space-between;
+    }
+
+    .nav-right {
+        width: auto;
+        min-width: 250px;
+    }
+
     .nav-logo {
-        width: 150px;
-        height: 50px;
+        max-width: 200px;
     }
+
+
     .nav-button {
-        width: 60px;
-        height: 50px;
-        font-size: 0.4rem;
+        width: 90px;
+        height: 100%;
         border-radius: 0px;
         transition: none;
+        margin: 0px;
     }
+
     .nav-button:hover {
-        transform:none;
+        /* transform:none; */
         border: none;
 
     }
@@ -372,11 +392,15 @@
         transform: none;
         border: none;
     }
-    
-    
+
+
     .nav-dropdownMenu-show {
-        width: 100px; 
-        font-size: 0.4rem;
+        width: 100px;
+    }
+
+    #accountMenu {
+        left: auto;
+        right: 0px;
     }
 
 }
