--- a/frontend/src/components/OrderDetails.css
+++ b/frontend/src/components/OrderDetails.css
@@ -48,5 +48,19 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+.orderdetails-amount li{
+    height: 100%;
+    width: 400px;
+    display: inline-flex;
+    align-items:  center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.orderdetails-amount li ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
