--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -90,6 +90,20 @@
     background-color: rgb(10, 241, 126);
 }
 
+.product-description{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.product-description h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .product-parameter-container {
     width: 80%;
     margin-bottom: 150px;
