--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,13 @@ html{
   font-size: 22px;
 }
 
+@media (max-width: 1100px) {
+  #root{
+    margin-left:20px;
+    margin-right: 20px;
+  }
+}
+
 @media (max-width: 650px) {
   #root{
     margin-left:10px;
