fix and add filter in searchProducts(inProgress)

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: auto;
+    margin-top: 15px;
     font-size: 0.9rem;
 }
 
