--- a/frontend/src/components/searchProducts.css
+++ b/frontend/src/components/searchProducts.css
@@ -1,6 +1,54 @@
-.searchProducts-container {
+.searchProducts-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     max-width: 2000px;
-    width: 80%;
+    font-size: 1rem;
+}
+.searchProducts-container h1{
+    font-size: 1.4rem;
+}
+
+.searchProducts-filterContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    border: 2px solid #E8E8E8;
+}
+.searchProducts-filters{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-bottom: 25px;
+}
+.searchProducts-filter{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 100%;
+    height: 100px;
+    /* background-color: #E8E8E8; */
+}
+.searchProducts-filter span{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.searchProducts-filter-number{
+    width: 100px;
+    height: 20px;
+    -webkit-appearance: none; 
+    -moz-appearance: textfield;
+    border: 2px solid #E8E8E8;
+    border-radius: 5px;
+}
+.searchProducts-productContainer{
+    max-width: 2000px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -10,12 +58,12 @@
 
 .searchProducts-product-container {
     border-radius: 15px;
-    border: 3px solid #E8E8E8;
+    border: 2px solid #E8E8E8;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+    width: 80%;
     height: 150px;
     margin-bottom: 50px;
 }
@@ -24,7 +72,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 40%;
+    width: 60%;
     height: 150px;
 }
 
@@ -34,7 +82,7 @@
 }
 
 .searchProducts-product-left-label{
-    max-height: 80%;
+    max-height: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -45,6 +93,7 @@
     display: flex;
     flex-direction: row;
     width: 40%;
+    margin-right: 15px;
     height: 150px;
     justify-content: flex-end;
     align-items: center;
@@ -71,6 +120,7 @@
 @media (max-width: 800px) {
     .searchProducts-container{
         width: 100%;
+        font-size: 0.8rem;
     }
     .searchProducts-product-container {
         font-size: 13px;
