--- a/frontend/src/components/productsComponents/searchProducts.css
+++ b/frontend/src/components/productsComponents/searchProducts.css
@@ -1,29 +1,37 @@
-.searchProducts-container{
+.searchProducts-container {
     display: flex;
     flex-direction: row;
     width: 100%;
     max-width: 2000px;
     font-size: 1rem;
 }
-.searchProducts-container h1{
+
+.searchProducts-container h1 {
     font-size: 1.4rem;
 }
 
-.searchProducts-filterContainer{
+.searchProducts-filterContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 30%;
     border: 2px solid #E8E8E8;
 }
-.searchProducts-filters{
+
+.searchProducts-filters {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
     margin-bottom: 25px;
 }
-.searchProducts-filter{
+
+.searchProducts-filterIcon {
+    max-height: 20px;
+    max-width: 20px;
+}
+
+.searchProducts-filter {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -32,22 +40,38 @@
     height: 100px;
     /* background-color: #E8E8E8; */
 }
-.searchProducts-filter span{
+
+.searchProducts-filter span {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.searchProducts-filter-number{
+
+.searchProducts-filter-number {
     width: 100px;
     height: 20px;
-    -webkit-appearance: none; 
+    -webkit-appearance: none;
     -moz-appearance: textfield;
     border: 2px solid #E8E8E8;
     border-radius: 5px;
 }
-.searchProducts-productContainer{
-    max-width: 2000px;
+.searchProducts-nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.searchProducts-nav h1{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.searchProducts-productContainer h1 {
+    margin-top: 0px;
+}
+
+.searchProducts-productContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -81,7 +105,7 @@
     max-width: 80%;
 }
 
-.searchProducts-product-left-label{
+.searchProducts-product-left-label {
     max-height: 95%;
     display: flex;
     flex-direction: column;
@@ -106,9 +130,8 @@
     justify-content: center;
     padding: 25px;
     border-radius: 10px;
-    font-size: 18px;
     cursor: pointer;
-    background-color:rgb(55, 179, 7);
+    background-color: rgb(55, 179, 7);
     color: #E8E8E8;
     border: 0px solid #fff;
 }
@@ -117,14 +140,70 @@
     background-color: rgb(42, 128, 9);
 }
 
+.mobileFilter-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(49,49,49,0.8);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mobileFilter-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.4;
+    background: #ffff;
+    padding: 14px 28px;
+    border-radius: 3px;
+    max-width: 600px;
+    min-width: 300px;
+    z-index: 1;
+}
+.modal-content span{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+@media (max-width: 1200px) {
+    .searchProducts-container {
+        font-size: 0.8rem;
+    }
+
+    .searchProducts-button {
+        padding: 15px;
+    }
+
+    .searchProducts-filterContainer{
+        width: 20%;
+        border: none;
+        position: relative;
+        display: flex;
+        align-items: flex-start;
+        left: 0px;
+    }
+    .searchProducts-nav h1{
+        width: 60%;
+        font-size: 1.2rem;
+    }
+}
+
+
 @media (max-width: 800px) {
-    .searchProducts-container{
+    .searchProducts-container {
         width: 100%;
         font-size: 0.8rem;
     }
-    .searchProducts-product-container {
-        font-size: 13px;
-    }
+
 
     .searchProducts-product-left {
         width: 50%;
@@ -134,14 +213,20 @@
         width: 50%;
     }
 
-    .searchProducts-button {
-        padding: 20px;
-        font-size: 15px;
-    }
+
 }
+
 @media (max-width: 600px) {
+    .searchProducts-container{
+        font-size: 0.5rem;
+    }
+    .mobileFilter-container{
+        min-width: 400px;
+    }
+    .modal-content{
+       min-width: 300px;
+    }
     .searchProducts-button {
-        padding: 15px;
-        font-size: 10px;
+        padding: 5px 0px 5px 0px;
     }
 }
