--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,8 +25,13 @@ code {
   margin-left:80px;
   margin-right: 80px;
 }
+
 html{
   font-size: 22px;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 @media (max-width: 1100px) {
