--- a/frontend/src/components/productsComponents/SearchProducts.css
+++ b/frontend/src/components/productsComponents/SearchProducts.css
@@ -1,6 +1,8 @@
 .searchProducts-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    min-height: 600px;
     width: 100%;
     max-width: 2000px;
     font-size: 1rem;
